--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 			Gov GR EU</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-body {background-color:#917373;background-repeat:no-repeat;background-position:top left;background-attachment:fixed;}
+body {background-color:#738291;background-repeat:no-repeat;background-position:top left;background-attachment:fixed;}
 h1{font-family:Arial, sans-serif;color:#000000;background-color:#ffffff;}
-p {font-family:Georgia, serif;font-size:14px;font-style:normal;font-weight:normal;color:#000000;background-color:#ffffff;}
+p {font-family:Times, serif;font-size:14px;font-style:normal;font-weight:normal;color:#423d3d;background-color:#ffffff;}
 </style>
 	</head>
 	<body>
