--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<!-- HTML Codes by Quackit.com -->
 		<title>
-			GR EU Citizens</title>
+			GOvGrEu</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body {background-color:#738291;background-repeat:no-repeat;background-position:top left;background-attachment:fixed;}
@@ -12,13 +12,7 @@ p {font-family:Times, serif;font-size:14px;font-style:normal;font-weight:normal;
 </style>
 	</head>
 	<body>
-		<h1>Navigate the Government services in Greece to be a EU citizen</h1>
-		<p>Assistance with Greek Government forms and processes in order to invest and obtain a European Golden Visa</p>
-		<p>Purchase a real estate property worth at least €250,000</p>
-		<p>Make a capital investment of at least €400,000 in a company registered in Greece</p>
-		<p>Make a €400,000 investment in Greek government bonds.</p>
-		<p>Make a €400,000 investment in bonds or shares of real estate investment companies.</p>
-		<p>Make a €400,000 deposit in a Greek bank.</p>
-		<p>Make an €800,000 investment in corporate or government bonds</p>
+		<h1>Go Visit Greece</h1>
+		<p>Greece is not a place, is a stte of mind ..</p>
 	</body>
 </html>
